# medicare-drug-optimizer

./: .coverage  GEMINI.md  LICENSE  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: drugs.py  (+1 more)
frontend/: package-lock.json
frontend/src/: App.jsx
medicare_drug_optimizer/: .gitignore  GEMINI.md  README.md  openapi-specification.json  tasks.md
medicare_drug_optimizer/backend/: README.md  pyproject.toml
medicare_drug_optimizer/backend/app/: main.py
medicare_drug_optimizer/backend/app/api/: drugs.py  pharmacies.py  plans.py
medicare_drug_optimizer/backend/app/models/: coverage_details.py  drug.py  drug_alternative.py  partd_plan.py  pharmacy.py  pharmacy_recommendation.py  plan_comparison.py  recommendation.py  user_pharmacy_preferences.py  user_session.py
medicare_drug_optimizer/backend/app/services/: drug_alternatives_processor.py  drug_coverage_processor.py  medicare_api_client.py  optimization_service.py  optimizer.py  pharmacy_optimizer.py
medicare_drug_optimizer/backend/tests/: conftest.py
medicare_drug_optimizer/backend/tests/api/: test_drug_alternatives.py  test_drug_coverage.py  test_optimized_plans.py  test_pharmacies.py  test_pharmacy_preferences.py  test_pharmacy_recommendations.py  test_plans.py
medicare_drug_optimizer/backend/tests/services/: test_drug_alternatives_processor.py  test_drug_alternatives_service.py  test_drug_coverage_processor.py  test_medicare_api_client.py  test_optimization_service.py  test_optimizer.py  test_pharmacy_optimizer.py
medicare_drug_optimizer/docs/: migration_guide.md  poetry_best_practices.md
medicare_drug_optimizer/frontend/: .env.production  .eslintrc.js  package-lock.json  package.json  vite.config.js
specs/001-i-d-like/: data-model.md  quickstart.md  tasks.md
(+110 files in other folders)
