[project]
name = "medicare-drug-optimizer"
version = "0.1.0"
description = ""
authors = [
    {name = "Wryen Meek",email = "wryenmeek@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "fastapi (>=0.118.2,<0.119.0)",
    "requests (>=2.32.5,<3.0.0)",
    "uvicorn (>=0.37.0,<0.38.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
